--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
-  "name": "Anti-Scam Imobiliário",
-  "version": "1.0",
+  "name": "SCM HUNTERS",
+  "version": "2.0",
   "description": "Detecta e alerta sobre anúncios imobiliários suspeitos.",
   "permissions": [
     "storage",
@@ -17,7 +17,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["modules/storage.js", "modules/ui.js", "modules/bot_detect.js", "content.js"],
+      "js": ["modules/storage.js", "modules/ui.js", "modules/bot_detect.js", "modules/behavior_tracker.js", "modules/ad_analyzer.js", "content.js"],
       "css": ["styles/content.css"],
       "run_at": "document_idle"
     }
