--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -17,9 +17,26 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["modules/storage.js", "modules/ui.js", "modules/bot_detect.js", "modules/behavior_tracker.js", "modules/ad_analyzer.js", "content.js"],
+      "js": [
+        "modules/storage.js", 
+        "modules/ui.js", 
+        "modules/bot_detect.js", 
+        "modules/behavior_tracker.js", 
+        "modules/ad_analyzer.js", 
+        "modules/sites/general.js",
+        "modules/sites/shopping.js",
+        "modules/sites/automotive.js",
+        "modules/sites/real_estate.js",
+        "content.js"
+      ],
       "css": ["styles/content.css"],
       "run_at": "document_idle"
+    }
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": ["styles/content.css", "modules/ui.js"],
+      "matches": ["<all_urls>"]
     }
   ],
   "action": {
